@@ -1,0 +1,68 @@
+.verbar	{
+	color: black;
+	background-color: #EDF2F5;
+}
+
+.submenu	{
+	position: absolute;
+	left: 0;
+	top: 0;
+	visibility: hidden;
+}
+
+.subframe	{
+	position: relative;
+	display: block;
+	background-color: #EDF2F5;
+	border: 1px solid #64879d;
+}
+
+.item	{
+	padding: 3px;
+	text-align: left;
+	white-space: nowrap;
+}
+
+.separator	{
+	background-color: #ff0000;
+    border-top: 1px solid #9e9a91;
+    border-bottom: 1px solid #ffffff;
+    margin: 2px 1px 2px 1px;    /* top right bottom left */
+    height: 0;
+    font-size: 1px;
+    line-height: 0
+}
+
+.item a	{
+	position: relative;
+	display: block;
+	text-decoration: none;
+}
+
+.item a:link	{
+	color: #000000;
+	text-decoration: none;
+}
+
+.item a:visited	{
+	color: #000000;
+	text-decoration: none;
+}
+
+.item a:hover	{
+	color: #ffffff;
+	background-color: #4b6983;
+	text-decoration: none;
+}
+
+.item a:active	{
+	color: #ff0000;
+	text-decoration: none;
+}
+
+.item .fwdarr	{
+	position: absolute;
+	top: 5px;
+	right: 7px;
+}
+
